--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,6 @@ python-dotenv==1.0.1
 qdrant-client==1.10.1
 streamlit==1.36.0
 pypdfium2==4.30.0
+rank_bm25==0.2.2
 # openpyxl
 # sentence-transformers
