--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,5 @@ qdrant-client==1.10.1
 streamlit==1.36.0
 pypdfium2==4.30.0
 rank_bm25==0.2.2
-# openpyxl
-# sentence-transformers
+openpyxl==3.1.5
+sentence-transformers==4.1.0
