--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-fastembed==0.3.3
-flashrank==0.2.8
-langchain-community==0.3.23
-langchain-experimental==0.3.4
-langchain-groq==0.3.2
-langchain-qdrant==0.2.0
-langchain==0.3.25
-python-dotenv==1.0.1
-qdrant-client==1.10.1
-streamlit==1.36.0
-pypdfium2==4.30.0
-rank_bm25==0.2.2
-openpyxl==3.1.5
-sentence-transformers==4.1.0
+fastembed
+flashrank
+langchain-community
+langchain-experimental
+langchain-groq
+langchain-qdrant
+langchain
+langchain-google-genai
+python-dotenv
+qdrant-client
+streamlit
+pypdfium2
+rank_bm25
+openpyxl
+sentence-transformers
