FINAL CLEANUP: Unified requirements & fixed imports
 Consolidated Requirements:
- Created unified requirements.txt with all dependencies
- Updated backend/frontend requirements to reference main file
- Includes RAGBase, FastAPI, Streamlit, and evaluation dependencies

 Bug Fixes:
- Fixed duplicate import statement in frontend/components/chat.py
- Cleaned up broken docstring and imports

 Documentation:
- Updated QUICKSTART.md with simplified setup instructions
- All requirements now centralized in single file

Ready for production deployment!

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,6 @@
-# Backend requirements
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-python-multipart==0.0.6
+# Healing Bot Backend Requirements
+# For backend-only deployment, install the main requirements file:
+# pip install -r ../requirements.txt
 
-# Existing dependencies
-langchain==0.1.20
-langchain-qdrant==0.1.1
-qdrant-client==1.6.9
-python-dotenv==1.0.0
-
-# Add any other existing dependencies from your original requirements.txt
+# Or use this file for backend-specific dependencies only:
+-r ../requirements.txt
