--- a/requirements.txt
+++ b/requirements.txt
@@ -4,40 +4,40 @@
 # Core Web Frameworks
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-streamlit
+streamlit==1.45.1
 python-multipart==0.0.6
 requests==2.31.0
 pydantic==2.5.0
 
 # LangChain & AI Pipeline
-langchain
-langchain-community
-langchain-experimental
-langchain-groq
-langchain-qdrant
-langchain-google-genai
+langchain==0.3.25
+langchain-community==0.3.24
+langchain-experimental==0.3.4
+langchain-groq==0.3.2
+langchain-qdrant==0.2.0
+langchain-google-genai==2.1.4
 
 # Vector Database & Embeddings
-qdrant-client
-fastembed
-sentence-transformers
+qdrant-client==1.14.3
+fastembed==0.7.1
+sentence-transformers==4.1.0
 
 # Search & Ranking
-flashrank
-rank_bm25
+flashrank==0.2.10
+rank_bm25==0.2.2
 
 # Document Processing
-pypdfium2
-openpyxl
+pypdfium2==4.30.1
+openpyxl==3.1.5
 
 # Configuration & Environment
-python-dotenv
+python-dotenv==1.1.0
 
 # Development & Testing (optional)
 pytest==7.4.0
 pytest-asyncio==0.21.1
 
 # Evaluation & Testing (RAGAS - optional)
-# ragas==0.1.0
-# datasets==2.14.6
-# pandas==2.0.3
+ragas==0.1.11
+datasets==2.14.0
+pandas==2.3.0
